another pipeline try

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,4 +31,4 @@ jobs:
           context: .
           file: .Dockerfile
           push: true
-          tags: latest
+          tags: leeroymanea/dotnet-traefik-exporter:latest
